# mcscript_vm

./: CMakeLists.txt  README.md
include/: ast.h  chunk.h  common.h  compiler.h  debug.h  memory.h  native.h  object.h  parser.h  scanner.h  table.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  main.c  memory.c  native.c  object.c  parser.c  scanner.c  table.c  value.c  vm.c
test/: CMakeLists.txt
test/include/: parser_test.h  table_test.h
test/src/: main.c  parser_test.c  table_test.c
